[project]
authors = [{name = "C. D. Armstrong", email = "chris.armstrong@stfc.ac.uk"}]
dependencies = ["numpy>=2.4.4,<3", "matplotlib>=3.10.9,<4", "pytest>=9.0.3,<10"]
name = "pirate"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pirate = { path = ".", editable = true }

[tool.pixi.tasks]
